syntax/parser/snapshots/better_api_syntax__parser__test__inline_doc_comments_work.snap
---
source: syntax/parser/test.rs
expression: res.node
---
NODE_ROOT@0..104
  NODE_TYPE_DEF@0..104
    TOKEN_KW_TYPE@0..4 "type"
    TOKEN_SPACE@4..5 " "
    NODE_NAME@5..8
      TOKEN_IDENTIFIER@5..8 "Foo"
    TOKEN_COLON@8..9 ":"
    TOKEN_SPACE@9..10 " "
    NODE_TYPE_RECORD@10..103
      TOKEN_KW_REC@10..13 "rec"
      TOKEN_SPACE@13..14 " "
      TOKEN_CURLY_LEFT@14..15 "{"
      TOKEN_EOL@15..16 "\n"
      TOKEN_SPACE@16..20 "    "
      NODE_TYPE_FIELD@20..102
        NODE_PROLOGUE@20..85
          NODE_DEFAULT@20..81
            TOKEN_DECORATOR_DEFAULT@20..28 "@default"
            TOKEN_PAREN_LEFT@28..29 "("
            NODE_VALUE_STRING@29..36
              TOKEN_STRING@29..36 "\"world\""
            TOKEN_PAREN_RIGHT@36..37 ")"
            TOKEN_SPACE@37..38 " "
            TOKEN_DOC_COMMENT@38..80 "/// Inline doc commen ..."
            TOKEN_EOL@80..81 "\n"
          TOKEN_SPACE@81..85 "    "
        NODE_NAME@85..93
          TOKEN_IDENTIFIER@85..93 "greeting"
        TOKEN_COLON@93..94 ":"
        TOKEN_SPACE@94..95 " "
        NODE_TYPE_STRING@95..101
          TOKEN_KW_STRING@95..101 "string"
        TOKEN_EOL@101..102 "\n"
      TOKEN_CURLY_RIGHT@102..103 "}"
    TOKEN_EOL@103..104 "\n"
