syntax/parser/snapshots/better_api_syntax__parser__test__invalid_root_field-2.snap
---
source: syntax/parser/mod.rs
expression: diagnostics
---
[
    Report {
        severity: Error,
        title: "invalid property `invalidField`",
        label: Some(
            Label {
                message: "invalid property",
                span: Span {
                    start: 0,
                    end: 12,
                },
            },
        ),
        note: None,
    },
]
