syntax/parser/snapshots/better_api_syntax__parser__test__invalid_token-2.snap
---
source: syntax/parser/mod.rs
expression: res.reports
---
[
    Report {
        severity: Error,
        title: "unexpected token an unknown token",
        labels: [
            Label {
                style: Primary,
                message: "unexpected token",
                span: Span {
                    start: 0,
                    end: 1,
                },
            },
        ],
        note: None,
    },
]
