syntax/parser/snapshots/better_api_syntax__parser__test__invalid_token.snap
---
source: syntax/parser/mod.rs
expression: tree
---
NODE_ROOT@0..37
  NODE_ERROR@0..22
    TOKEN_ERROR@0..1 "_"
    TOKEN_IDENTIFIER@1..14 "invalid_token"
    TOKEN_COLON@14..15 ":"
    TOKEN_SPACE@15..16 " "
    TOKEN_IDENTIFIER@16..22 "foobar"
  TOKEN_EOL@22..23 "\n"
  NODE_API_NAME@23..37
    TOKEN_IDENTIFIER@23..27 "name"
    TOKEN_COLON@27..28 ":"
    TOKEN_SPACE@28..29 " "
    NODE_VALUE@29..36
      TOKEN_STRING@29..36 "\"hello\""
    TOKEN_EOL@36..37 "\n"
