syntax/parser/snapshots/better_api_syntax__parser__test__parse_server_error-2.snap
---
source: syntax/parser.rs
expression: diagnostics
---
[
    Report {
        severity: Error,
        title: "expected value, found an identifier",
        label: Some(
            Label {
                message: "expected value",
                span: Span {
                    start: 36,
                    end: 42,
                },
            },
        ),
        note: None,
    },
    Report {
        severity: Error,
        title: "expected field name, found an integer",
        label: Some(
            Label {
                message: "expected field name",
                span: Span {
                    start: 47,
                    end: 50,
                },
            },
        ),
        note: Some(
            "help: field name must be an identifier or string",
        ),
    },
]
